# statefun-rust

./: Cargo.toml
statefun-greeter-example/: Cargo.toml
statefun-greeter-example-proto/: Cargo.toml  build.rs
statefun-greeter-example/src/: main.rs
statefun-proto/: Cargo.toml  build.rs
statefun-proto/src/: lib.rs
statefun-sdk/: Cargo.toml
statefun-sdk/src/: error.rs  function_registry.rs  invocation_bridge.rs  lib.rs
statefun-sdk/src/io/: kafka.rs
statefun-sdk/src/transport/: hyper.rs
