[package]
name = "statefun-proto"
version = "0.1.1"
authors = [
    "Omer Ben-Amram <omerbenamram@gmail.com>",
    "Aljoscha Krettek <aljoscha.krettek@gmail.com>",
]
readme = "../README.md"
edition = "2018"
license = "MIT"

description = "Protobuf definitions for the Statefun Rust SDK (statefun)"

documentation = "https://docs.rs/statefun/"
homepage = "https://github.com/aljoscha/statefun-rust"
repository = "https://github.com/aljoscha/statefun-rust.git"

[dependencies]
prost = "0.9.0"
prost-wkt = "0.3"
prost-wkt-types = "0.3"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
prost-build = "0.9.0"
prost-wkt-build = "0.3"
glob = "0.3"
