[package]
name = "statefun"
version = "0.1.1"
authors = [
    "Omer Ben-Amram <omerbenamram@gmail.com>",
    "Aljoscha Krettek <aljoscha.krettek@gmail.com>",
]
readme = "../README.md"
edition = "2018"
license = "MIT"

description = "A Rust SDK for the Apache Flink Stateful Functions (StateFun) project. See: https://flink.apache.org/stateful-functions.html"

documentation = "https://docs.rs/statefun/"
homepage = "https://github.com/aljoscha/statefun-rust"
repository = "https://github.com/aljoscha/statefun-rust.git"

[dependencies]
thiserror = "1"
log = "0.4.16"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
bytes = "1"
statefun-proto = { path = "../statefun-proto", version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }

prost = "0.9.0"
prost-wkt = "0.3"
prost-wkt-types = "0.3"

[dev-dependencies]
anyhow = "1.0.56"
